--- a/src/main/resources/templates/updatedespesa.html
+++ b/src/main/resources/templates/updatedespesa.html
@@ -62,12 +62,6 @@
               <p>Usuários</p>
             </a>
           </li>
-          <li class="active-pro">
-            <a th:href="@{/logout}">
-              <i class="now-ui-icons arrows-1_minimal-left"></i>
-              <p>Sair</p>
-            </a>
-          </li>
         </ul>
       </div>
     </div>
@@ -236,17 +230,13 @@
   </div>
 
   <!--   Core JS Files   -->
-  <script src="../static/assets/js/core/jquery.min.js"></script>
-  <script src="../static/assets/js/core/popper.min.js"></script>
-  <script src="../static/assets/js/core/bootstrap.min.js"></script>
-  <script src="../static/assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-
-  <!-- Chart JS -->
-  <script src="../static/assets/js/plugins/chartjs.min.js"></script>
-  <!--  Notifications Plugin    -->
-  <script src="../static/assets/js/plugins/bootstrap-notify.js"></script>
-  <!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="../static/assets/js/now-ui-dashboard.min.js?v=1.5.0" type="text/javascript"></script><!-- Now Ui Dashboard DEMO methods, don't include it in your project! -->
-  <script src="../static/assets/demo/demo.js"></script>
+  <script th:src="@{/assets/js/core/jquery.min.js}"></script>
+  <script th:src="@{/assets/js/core/popper.min.js}"></script>
+  <script th:src="@{/assets/js/core/bootstrap.min.js}"></script>
+  <script th:src="@{/assets/js/plugins/perfect-scrollbar.jquery.min.js}"></script>
+  <script th:src="@{/assets/js/plugins//bootstrap-notify.js}"></script>
+  <script th:src="@{/assets//demo/demo.js}"></script>
+  <script th:src="@{assets/js/now-ui-dashboard.js?v=1.0.1}"></script>
+  <script th:src="@{assets/demo/demo.js}"></script>
 </body>
 </html>
