--- a/src/main/resources/templates/updateinvestimento.html
+++ b/src/main/resources/templates/updateinvestimento.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <link rel="icon" type="image/png" th:href="@{/assets/img/favicon.png}">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>Fortune | Conversor</title>
+  <title>Fortune | Editar Investimento</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
@@ -33,25 +33,25 @@
       <div class="sidebar-wrapper" id="sidebar-wrapper">
         <ul class="nav">
           <li>
-            <a href="./receita">
+            <a thref="@{/receita}">
               <i class="now-ui-icons business_money-coins"></i>
               <p>Receita</p>
             </a>
           </li>
-          <li>
-            <a href="./investimento">
+          <li class="active">
+            <a thref="@{/investimento}">
               <i class="now-ui-icons business_briefcase-24"></i>
               <p>Investimento</p>
             </a>
           </li>
           <li>
-            <a href="./despesa">
+            <a thref="@{/despesa}">
               <i class="now-ui-icons shopping_basket"></i>
               <p>Despesa</p>
             </a>
           </li>
-          <li class="active">
-            <a href="./conversor">
+          <li>
+            <a th:href="@{/conversor}">
               <i class="now-ui-icons arrows-1_refresh-69"></i>
               <p>Conversor Monetário</p>
             </a>
@@ -77,13 +77,25 @@
                 <span class="navbar-toggler-bar bar3"></span>
               </button>
             </div>
-            <a class="navbar-brand">Conversor Monetário</a>
+            <a class="navbar-brand">Investimentos</a>
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-bar navbar-kebab"></span>
             <span class="navbar-toggler-bar navbar-kebab"></span>
             <span class="navbar-toggler-bar navbar-kebab"></span>
           </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navigation">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#administrador">
+                  <i class="now-ui-icons ui-2_settings-90"></i>
+                  <p>
+                    <span class="d-lg-none d-md-block">Administrador</span>
+                  </p>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
       <!-- End Navbar -->
@@ -94,50 +106,69 @@
           <div class="col-md-12">
             <div class="card ">
               <div class="card-header ">
-                Converter
+                Editar dados do Investimento <span th:text="${investimento.nome}"></span>
               </div>
               <div class="card-body ">
-                <form th:action="@{/conversor}" th:object="${conversor}" method="get">
+                <form th:action="@{/update_investimento/{codigo}(codigo=${investimento.codigo})}" th:object="${investimento}" method="post">
                   <div class="row">
-                    <div class="col-md-3 px-3">
+                    <div class="col-md-6 px-3">
                       <div class="form-group">
-                        <label>Tipo Moeda</label>
-                        <select class="form-control" placeholder="Moeda" name="moedaPrimaria" required>
-                          <option value="">Selecione</option>
-<!--                          <option value="REAL">REAL</option>-->
-                          <option value="EURO">EURO</option>
-                          <option value="DOLAR">DÓLAR</option>
-                        </select>
+                        <label>Nome</label>
+                        <input type="text" class="form-control" placeholder="Nome" name="nome" th:value="${investimento.nome}" required>
                       </div>
                     </div>
-                    <div class="col-md-3 px-3">
+                    <div class="col-md-6 px-3">
                       <div class="form-group">
-                        <label>Valor</label>
-                        <input type="number" step="0.01" class="form-control" placeholder="Valor" name="valor" required>
-                      </div>
-                    </div>
-                    <div class="col-md-3 px-3">
-                      <div class="form-group">
-                        <label>Tipo Moeda</label>
-                        <select class="form-control" placeholder="Moeda" name="moedaPrimaria"  disabled>
-                          <option value="">Selecione</option>
-<!--                          <option value="REAL">REAL</option>-->
-                          <option value="EURO">EURO</option>
-                          <option value="DOLAR">DÓLAR</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="col-md-3 px-3">
-                      <div class="form-group">
-                        <label>Valor</label>
-                        <input type="number" step="0.01" class="form-control" placeholder="Valor" name="valor" disabled>
+                        <label>Descrição</label>
+                        <input type="text" min="0" class="form-control" placeholder="Descrição" th:value="${investimento.descricao}" name="descricao">
                       </div>
                     </div>
                   </div>
                   <div class="row">
+                    <div class="col-md-4 px-3">
+                      <div class="form-group">
+                        <label>Valor</label>
+                        <input type="number" step="0.01" class="form-control" placeholder="Valor" name="valor" th:value="${investimento.valor}" required>
+                      </div>
+                    </div>
+                    <div class="col-md-4 px-3">
+                      <div class="form-group">
+                        <label>Tipo Investimento</label>
+                        <select class="form-control" placeholder="Moeda" name="investimento" th:value="${investimento.investimento}" required>
+                          <option value="">Selecione</option>
+                          <option value="TESOURO_DIRETO">TESOURO DIRETO</option>
+                          <option value="CDB">CDB</option>
+                          <option value="ACOES_DE_EMPRESAS">ACOES DE EMPRESAS</option>
+                          <option value="FUNDOS_IMOBILIARIOS">FUNDOS IMOBILIARIOS</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="col-md-4 px-3">
+                      <div class="form-group">
+                        <label>Tipo Moeda</label>
+                        <select class="form-control" placeholder="Moeda" name="tipomoeda" th:value="${investimento.tipomoeda}" required>
+                          <option value="">Selecione</option>
+                          <option value="REAL">REAL</option>
+                          <option value="EURO">EURO</option>
+                          <option value="DOLAR">DÓLAR</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="col-md-4 px-3">
+                      <div class="form-group">
+                        <label>Data</label>
+                        <input type="date" min="0" class="form-control" placeholder="data" name="dataInvestimento" th:value="${investimento.dataInvestimento}" required>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="alert alert-warning mt-4" role="alert" th:if="${not #strings.isEmpty(mensagem)}">
+                    <b> Atenção - </b>
+                    <span th:text="${mensagem}"></span>
+                  </div>
+                  <div class="row">
                     <div class="col-md-2 px-3 ml-auto">
                       <div class="form-group">
-                        <button type="submit" class="btn btn-primary form-control design_app">Converter</button>
+                        <button type="submit" class="btn btn-primary form-control design_app">Atualizar</button>
                       </div>
                     </div>
                     <div class="col-md-2 px-3">
@@ -147,7 +178,7 @@
                     </div>
                     <div class="col-md-2 px-3">
                       <div class="form-group">
-                        <a th:href="@{/despesa}" class="btn btn-secondary form-control design_app" value="Voltar" style="background-color: #003e7e; color: white">Voltar</a>
+                        <a th:href="@{/investimento}" class="btn btn-secondary form-control design_app" value="Limpar" style="background-color: #003e7e; color: white">Voltar</a>
                       </div>
                     </div>
                   </div>
@@ -155,25 +186,40 @@
               </div>
             </div>
           </div>
-
-
-            <div class="col-md-12" th:if="${conversor != null}">
-              <div class="card ">
-                <div class="card-header ">
-                  Conversão <span th:utext="${conversor.nome}"></span>
-                </div>
-                <div class="card-body">
-                  <div class="row text-center">
-                    <div class="col-md-4">
-                      <h5>Valor de Entrada: R$ <span th:utext="${conversor.valorPrimario}"></span></h5>
-                    </div>
-                    <div class="col-md-4">
-                      <h5>Valor Convertido: <span th:utext="${conversor.valorConvertidoFormatado}"></span></h5>
-                    </div>
-                    <div class="col-md-4">
-                      <h5>Sigla: <span th:utext="${conversor.sigla}"></span></h5>
-                    </div>
-                  </div>
+          <div class="col-md-12">
+            <div class="card ">
+              <div class="card-header ">
+                Dados do Investimento de <span th:text="${investimento.nome}"></span>
+                <div class="table-responsive">
+                  <table class="table">
+                    <thead>
+                    <tr>
+                      <th scope="col">Código</th>
+                      <th scope="col">Nome</th>
+                      <th scope="col">Descrição</th>
+                      <th scope="col">Investimento</th>
+                      <th scope="col">Moeda</th>
+                      <th scope="col">Valor</th>
+                      <th scope="col">Data</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                      <th data-label="Código" scope="row"><span th:utext="${investimento.codigo}"></span></th>
+                      <td data-label="Nome"><span th:utext="${investimento.nome}"></span></td>
+                      <td data-label="Descrição"><span th:utext="${investimento.descricao}"></span></td>
+                      <td data-label="Tipo Investimento"><span th:utext="${investimento.investimento}"></span></td>
+                      <td data-label="Tipo Moeda"><span th:utext="${investimento.tipomoeda}"></span></td>
+                      <td data-label="Valor"><span th:utext="${investimento.valorFormatado}"></span></td>
+                      <td data-label="Data"><span  th:utext="${investimento.dataFormatada}"></span></td>
+                    </tr>
+                    <tr th:if="${investimento == null}">
+                      <div class="alert alert-info mt-4">
+                        <span><b> Info - </b> Nenhuma investimento cadastrado!</span>
+                      </div>
+                    </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </div>
